# Stratus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-cd.yml  backend-ci.yml  frontend-cd.yml  frontend-ci.yml  games.yml  os.yml  stratusd-build.yml
StratusService/: CMakeLists.txt
StratusService/src/: CMakeLists.txt  main.c
StratusService/src/Capture/: CMakeLists.txt
StratusService/src/Encode/: CMakeLists.txt
StratusService/src/SideCar/: CMakeLists.txt
StratusService/src/Title/: CMakeLists.txt
StratusService/src/Transport/: CMakeLists.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  server.mjs  server.ts  serverless.yml  testrequest.http  tsconfig.json  usersController.mjs  usersModel.mjs  usersRoutes.mjs
backend/lib/: authCookies.ts  authToken.ts
backend/routes/: auth.ts  authController.ts  games.mjs  games.ts  gamesController.mjs  gamesController.ts  play.ts  playController.ts  users.mjs  users.ts  usersController.mjs  usersController.ts
backend/socket/: definitions.ts  messages.ts  node.ts  send.ts  sessions.ts
design/: Stratus-Wireframes.fig
docs/: Audio_Capture_Pipeline.md  Audio_Pipeline.md  Blog Post Webtransport.md  Blog-Post-Webtransport.md  Blog_Stratus_Peformance.md  Blog_Stratus_Performance.md  README.md  Temp_File.md  architecture.md  backendspec.md  frontend_uiux_design.md  game-packaging.md  stratus-os.md  video-pipeline.md  wayland-proxy.md
frontend/: .editorconfig  .env.example  .gitignore  .prettierrc.json  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: audioStream.worklet.js
frontend/scripts/: prune-static-export.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: About.tsx  CreateGame.tsx  Nav.tsx  (+3 more)
games/: README.md  build-assaultcube.sh  build-freedoom.sh  build-supertux.sh  build-supertuxkart.sh  stratus-launcher.sh  supertuxkart.sh
os/: .editorconfig  .gitignore  README.md  install.sh
os/fastfetch/: PKGBUILD  stratus-logo.patch
os/stratus-launcher/: PKGBUILD  stratus-launcher-init.service
os/stratusd/: PKGBUILD  stratusd-sway.service  stratusd-weston.service  stratusd.conf  stratusd.install  stratusd.service  stratusd.sysusers  stratusd.tmpfiles
stratusd/: .editorconfig  .env.example  .gitignore  CMakeLists.txt  README.md  main.c  test.txt  version.h.in
stratusd/Capture/: CMakeLists.txt
stratusd/Capture/include/: Capture.h
stratusd/Capture/src/: Capture.c  capture-priv.h  dma-buffers-priv.h  dma-buffers-pub.h  dma-buffers.c  dmabuf-buffers-priv.h  dmabuf-buffers-pub.h  dmabuf-buffers.c  proxy.c  proxy.h  resize-pub.h  resize.c  shm-buffers-priv.h  shm-buffers-pub.h  shm-buffers.c  shm-frame-output.c  shm-frame-output.h  video-output-priv.h  video-output-pub.h  video-output.c
stratusd/CapturePw/: CMakeLists.txt  README.md
stratusd/CapturePw/include/: CapturePw.h  RingBuffer.h
stratusd/CapturePw/src/: CapturePw.c  RingBuffer.c
stratusd/Common/: CMakeLists.txt
stratusd/Common/include/: CapturedAudioFrame.h  Common.h  audio-transport-queue.h  input-queue.h  rbuf2.h  video-encode-queue.h  video-transport-queue.h
stratusd/Common/src/: Common.c  TransportMessageQueue.c  rbuf2.c  ringBuffer.c
stratusd/Encode/: CMakeLists.txt
stratusd/Encode/include/: AudioEncode.h  EGLUtils.h  Encode.h  EncodeUtils.h
stratusd/Encode/src/: AudioEncode.c  EGLUtils.c  EGLUtils.h  Encode.c  EncodePrivate.h  EncodeUtils.c  EncodeUtils.h
stratusd/Input/: CMakeLists.txt
stratusd/Input/include/: Input.h
stratusd/Input/src/: Input.c  gamepad.c  gamepad.h
stratusd/SideCar/: CMakeLists.txt
stratusd/SideCar/include/: SideCar.h
stratusd/SideCar/src/: SideCar.c  api.c  api.h  session.c  session.h  sidecar-priv.h
stratusd/Transport/: CMakeLists.txt
stratusd/Transport/include/: Certs.h  QuicheCore.h  QuicheTools.h  StratusVideoSessionVisitor.h  StratusWebTransportSessionVisitor.h  Transport.h  TransportPriv.h
stratusd/Transport/src/: Certs.cpp  InputStreamVisitor.cpp  InputStreamVisitor.h  QuicheTools.cpp  StratusVideoSessionVisitor.cpp  StratusWebTransportSessionVisitor.cpp  StratusWebTransportSessionVisitor.h  Transport.cpp  TransportPriv.h
stratusd/Transport/src/StratusSteamVisitors/: StratusWebTransportInboundStreamVisitor.cpp  StratusWebTransportInboundStreamVisitor.h  StratusWebTransportOutboundStreamVisitor.cpp  StratusWebTransportOutboundStreamVisitor.h
stratusd/cmake/: FindSensors.cmake
stratusd/libs/QuicheLib/: CMakeLists.txt
stratusd/libs/QuicheLib/include/: +_repo_rules+com_google_googleurl  +_repo_rules+com_google_quic_trace  abseil-cpp+  bazel_tools  bazel_tools+xcode_configure_extension+local_config_xcode  boringssl+  googletest+  platforms  protobuf+  quiche  re2+  rules_cc+  rules_cc++cc_configure_extension+local_config_cc  rules_license+  zlib+
stratusd/libs/QuicheLib/src/: QuicheLib.cpp
stratusd/libs/libquiche/: .gitignore  CMakeLists.txt  WebTransportDemo.cpp
stratusd/libs/libquiche/scripts/: GenerateCerts.sh
stratusd/libs/wayland/: .editorconfig  CMakeLists.txt  README.md
stratusd/libs/wayland/src/: connection.c  scanner.c  wayland-client-core.h  wayland-client.c  wayland-client.h  wayland-os.c  wayland-os.h  wayland-private.h  wayland-server-core.h  wayland-server-private.h  wayland-server.c  wayland-server.h  wayland-shm.c  wayland-util.c  wayland-util.h  wayland-version.h
stratusd/scripts/: test_encode
stratusd/src/: CMakeLists.txt  main.c
stratusd/src/Capture/: CMakeLists.txt
stratusd/src/Capture/include/: Capture.h
stratusd/src/Capture/src/: Capture.c  config.h  connection.c
stratusd/src/Encode/: CMakeLists.txt
stratusd/src/SideCar/: CMakeLists.txt
stratusd/src/Title/: CMakeLists.txt
stratusd/src/Transport/: CMakeLists.txt
stratusd/tests/: CMakeLists.txt  stratusdtests.cpp
tempServer/: webtransport_server.py
webtransport-server/: .gitignore  README.md  avcC_utils.py  temp.py  webtransport_server.py
(+105 files in other folders)
